# builtin_fs

./: CMakeLists.txt  README.md  files_to_builtin.py
example/: .builtin_fs.toml  CMakeLists.txt  README.md  test.cpp
